--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,9 @@
 
     {% block corecss %}
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;1,400;1,600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
@@ -44,7 +47,7 @@
           <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
               <form method="GET" action="">
                   <div class="input-group w-100">
-                      <input class="form-control  rounded-2" type="text" name="q" placeholder="Search our site">
+                      <input class="form-control  rounded-2" type="text" name="q" placeholder="Search for drinks">
                       <div class="input-group-append">
                           <button class="form-control btn btn-danger rounded-2" type="submit">
                               <span class="icon">
@@ -109,6 +112,5 @@
     {% block postloadjs %}
     {% endblock %}
 
-    
   </body>
 </html>
