--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,11 +10,12 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100">
-        <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-white">
-                    Browse Our Products
+
+    <div class="container h-100" id="home-cta">
+        <div class="row h-100 align-items-start mb-5">
+            <div class="col-7 col-md-6">
+                <h1 class="display-4 logo-font text-white bg-see-through" id="cta-text">
+                    Browse Our Drinks Selection
                 </h1>
                 <div class="my-1">
                     <h4>
