Add overlay to products.html

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -110,6 +110,17 @@ body {
     background-color: rgba(39, 43, 43, 0.5);
 }
 
+/* overlay for use on every page where required */
+.overlay {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background: black;
+    z-index: -1;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
