--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -11,10 +11,78 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col">
-                {{  products  }}
+            <div class="col text-center mt-3">
+                <h2 class="logo-font">Products</h2>
+                <hr class="w-50 mb-1">
+            </div>
+        </div>
+        <div class="row">
+            <div class="product-container col-10 offset-1">
+                <div class="row mt-1 mb-2"></div>
+                <div class="row">
+                    {% for product in products %}
+                        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                            <div class="card h-100 border-0">
+                                {% if product.image %}
+                                <a href="">
+                                    <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                                </a>
+                                {% else %}
+                                <a href="">
+                                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                                </a>
+                                {% endif %}
+                                <div class="card-body pb-0">
+                                    <p class="mb-0 font-weight-bold">{{ product.name }}</p>
+                                   
+                                    <p class="mb-0"><strong>Origin: </strong>{{ product.country_of_origin }}</p>
+                                {% if product.rating %}
+                                                <small class="text-muted font-weight-bold"><i class="fas fa-star mr-1 text-danger"></i><strong>Rating: </strong>{{ product.rating }} / 5</small>
+                                            {% else %}
+                                                <small class="text-muted">No Rating</small>
+                                            {% endif %}
+                                        </div>
+                                <div class="card-body pb-0">
+                                    <p class="mb-0"><strong>Type: </strong>{{ product.category }}</p>
+                                    <p class="mb-0"><strong>Description: </strong>{{ product.description }}</p>
+                                    <p class="mb-0"><strong>Taste Notes: </strong>{{ product.taste_notes }}</p>
+                                    <p class="mb-0"><strong>Alcohol Content: </strong>{{ product.alcohol_content }}%</p>
+                                    <p class="mb-0"><strong>Volume: </strong>{{ product.volume }} mls</p>
+                                </div>
+                                <div class="card-footer bg-white pt-0 border-0 text-left">
+                                    <div class="row">
+                                        <div class="col">
+                                            <p class="lead mb-0 text-left font-weight-bold">Price: £{{ product.price }} <span class="font-weight-light text-small">(per bottle/can)</span></p>
+                                            
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        {% if forloop.counter|divisibleby:1 %}
+                            <div class="col-12 d-sm-none mb-5">
+                                <hr>
+                            </div>
+                        {% endif %}                        
+                        {% if forloop.counter|divisibleby:2 %}
+                            <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
+                                <hr>
+                            </div>
+                        {% endif %}
+                        {% if forloop.counter|divisibleby:3 %}
+                            <div class="col-12 d-none d-lg-block d-xl-none mb-5">
+                                <hr>
+                            </div>
+                        {% endif %}
+                        {% if forloop.counter|divisibleby:4 %}
+                            <div class="col-12 d-none d-xl-block mb-5">
+                                <hr>
+                            </div>
+                        {% endif %}
+                    {% endfor %}
+                </div>
             </div>
         </div>
     </div>
