--- a/static/css/base.css
+++ b/static/css/base.css
@@ -130,6 +130,21 @@ body {
     z-index: -1;
 }
 
+.hr-danger {
+    border-color: #dc3545;
+}
+
+/* for image sizes on product page */
+.fixed-height { 
+    height: 550px;  
+    object-fit: cover; 
+}
+
+.margin-top
+        {
+            margin-top: 220px;
+        }
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
@@ -170,6 +185,11 @@ body {
     #cta-text {
         font-size: 60px;
     }
+
+    .margin-top
+        {
+            margin-top: 0px;
+        }
 }
 
 @media (min-width: 768px) {
@@ -182,4 +202,6 @@ body {
     #home-cta {
         margin-top: 200px;
     }
+
+ 
 }
