--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -8,7 +8,7 @@
                 <a href="" class="dropdown-item text-danger">By Price</a>
                 <a href="" class="dropdown-item text-danger">By Rating</a>
                 <a href="" class="dropdown-item text-danger">By Category</a>
-                <a href="" class="dropdown-item text-danger">All Products</a>
+                <a href="{% url 'products' %}" class="dropdown-item text-danger">All Products</a>
             </div>
         </li>
 
