--- a/static/css/base.css
+++ b/static/css/base.css
@@ -85,6 +85,7 @@ body {
 
 .nav-item {
     background-color: black;
+    margin-left: 10px;
 }
 
 .navbar {
@@ -142,7 +143,7 @@ body {
 
 .margin-top
         {
-            margin-top: 220px;
+            margin-top: 240px;
         }
 
 /* -------------------------------- Media Queries */
@@ -202,6 +203,4 @@ body {
     #home-cta {
         margin-top: 200px;
     }
-
- 
 }
