--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -26,11 +26,11 @@
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card h-100 border-0">
                                 {% if product.image %}
-                                <a href="" class="overflow-hidden">
+                                <a href="{% url 'product_detail' product.id %}" class="overflow-hidden">
                                     <img class="card-img-top img-fluid d-block fixed-height" src="{{ product.image.url }}" alt="{{ product.name }}">
                                 </a>
                                 {% else %}
-                                <a href="" class="overflow-hidden">
+                                <a href="{% url 'product_detail' product.id %}" class="overflow-hidden">
                                     <img class="card-img-top img-fluid d-block fixed-height" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                                 </a>
                                 {% endif %}
