Change text on delivery banner

--- a/templates/base.html
+++ b/templates/base.html
@@ -111,8 +111,8 @@
     </div>
     <div class="row justify-content-center">
         <div id="delivery-banner" class="text-center w-90 mx-auto text-danger font-weight-bold">
-            <h4 class="logo-font d-sm-none border border-danger rounded-lg bg-orange banner-text">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>
-            <h4 class="logo-font d-none d-sm-block border border-danger rounded-lg bg-orange font-weight-medium banner-text">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                
+            <h4 class="logo-font d-sm-none border border-danger rounded-lg bg-orange banner-text">Spend over £{{ free_delivery_threshold }} and get free delivery</h4>
+            <h4 class="logo-font d-none d-sm-block border border-danger rounded-lg bg-orange font-weight-medium banner-text">Spend over £{{ free_delivery_threshold }} and get free delivery</h4>                
         </div>
     </div>
     
