Add error message for search criteria

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -146,6 +146,9 @@ body {
             margin-top: 240px;
         }
 
+.alert {
+    background-color: white;
+}
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
