--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -18,6 +18,15 @@
                 <hr class="w-50 mb-1 hr-danger">
             </div>
         </div>
+        {% if messages %}
+        <div class="container mt-3">
+            {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} fade show" role="alert">
+                {{ message }}
+            </div>
+            {% endfor %}
+        </div>
+        {% endif %}
         <div class="row">
             <div class="product-container col-10 offset-1">
                 <div class="row mt-1 mb-2"></div>
