Add logo to header text

--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,6 +1,6 @@
 <ul id="mobile-background">
     <a href="{% url 'home' %}" class="nav-link main-logo-link d-lg-none">
-        <h2 class="logo-font text-danger my-0">Shopaholic</h2>
+        <h2 class="logo-font text-danger my-0">Shopaholic <span><i class="fa-solid fa-champagne-glasses"></i></span></h2>
     </a>
     <li class="list-inline-item">
       <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
