--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -7,7 +7,7 @@
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
                 <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item text-danger">By Price</a>
                 <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item text-danger">By Rating</a>
-                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item text-danger">By Category</a>
+                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item text-danger">By Type</a>
                 <a href="{% url 'products' %}" class="dropdown-item text-danger">All Products</a>
             </div>
         </li>
