--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -136,11 +136,24 @@
             </div>
         </div>
     </div>
+    <div class="btt-button shadow-sm rounded-0 border border-white">
+        <a class="btt-link d-flex h-100">
+            <i class="fas fa-arrow-up text-white mx-auto my-auto"></i>
+        </a>	
+    </div>
 {% endblock %}
 
 {% block postloadjs %}
     {{ block.super }}
+
 <script type="text/javascript">
+    $('.btt-link').click(function(e) {
+        window.scrollTo(0,0)
+    })
+</script>
+
+<script type="text/javascript">
+
    // This will attach an event listener to the "sort-selector" dropdown.
 document.getElementById("sort-selector").addEventListener("change", function() {
     
