--- a/static/css/base.css
+++ b/static/css/base.css
@@ -187,6 +187,19 @@ body {
 .product-sort-row {
     width: 90%;
 }
+
+.btt-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+
+.btt-link {
+    cursor: pointer;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
