--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -13,7 +13,7 @@
     <div class="overlay"></div>
     <div class="container-fluid margin-top">
         <div class="col text-center mt-3">
-            <h2 class="logo-font margin-top">Product Details For {{ product.name }} {{ product.category }}</h2>
+            <h2 class="logo-font margin-top text-white">Product Details For {{ product.name }}</h2>
             <hr class="w-50 mb-1 hr-danger">
         </div>
         <div class="row">
@@ -32,13 +32,13 @@
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
-                <div class="product-details-container mb-5 mt-md-5">
+                <div class="product-details-container mb-5 mt-md-5 text-white">
                     <div class="card-body pb-0">
-                        <p class="mb-0 font-weight-bold">{{ product.name }}</p>
+                        <p class="mb-0 font-weight-bold text-white">{{ product.name }}</p>
                        
                         <p class="mb-0"><strong>Origin: </strong>{{ product.country_of_origin }}</p>
                     {% if product.rating %}
-                                    <small class="text-muted font-weight-bold"><i class="fas fa-star mr-1 text-danger"></i><strong>Rating: </strong>{{ product.rating }} / 5</small>
+                                    <small class="text-white font-weight-bold"><i class="fas fa-star mr-1 text-danger"></i><strong class="text-white">Rating: </strong >{{ product.rating }} / 5</small>
                                 {% else %}
                                     <small class="text-muted">No Rating</small>
                                 {% endif %}
@@ -51,7 +51,7 @@
                         <p class="mb-0"><strong>Volume: </strong>{{ product.volume }} mls</p>
                     </div>
                     <div>
-                        <p class="card-body"><strong>Price: </strong><span class="text-white font-weight-bold">£ {{ product.price }}</span><span class="font-weight-light text-small ml-1"> (per bottle/can)</span></p>
+                        <p class="card-body"><strong>Price: </strong><span class="text-white font-weight-bold">£ {{ product.price }}</span><span class="font-weight-light text-medium ml-1"> (per bottle/can)</span></p>
                     </div>
                 </div>
             </div>
