Added add to bag functionality

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -196,6 +196,12 @@ body {
     right: 10px;
 }
 
+.btn-outline-black {
+    background: white;
+    color: black !important; /* use important to override link colors for <a> elements */
+    border: 1px solid black;
+}
+
 .btt-link {
     cursor: pointer;
 }
