Add profile functionality

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -276,6 +276,10 @@ body {
     overflow-y: auto;
 }
 
+.custom-margin-top {
+    padding-top: 200px;
+  }
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
