Add username to profile page

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -24,6 +24,7 @@
                 <hr>
             </div>
         </div>
+        <p>Welcome {{ profile }}</p>
         <div class="row">
             <div class="col-12 col-lg-6">
                 <p class="text-white">Default Delivery Information</p>
