--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
                               {% if request.user.is_superuser %}
                                   <a href="" class="dropdown-item text-danger">Product Management</a>
                               {% endif %}
-                              <a href="" class="dropdown-item text-danger">My Profile</a>
+                              <a href="{% url 'profile' %}" class="dropdown-item text-danger">My Profile</a>
                               <a href="{% url 'account_logout' %}" class="dropdown-item text-danger">Logout</a>
                           {% else %}
                               <a href="{% url 'account_signup' %}" class="dropdown-item text-danger">Register</a>
