--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -17,17 +17,18 @@
 <hr>
 <hr>
 <hr>
-<h1>{% trans "Sign Out" %}</h1>
+<section class="float-right mr-5 pb-3 bg-see-through">
+<h1 class="text-white ml-2">{% trans "Sign Out" %}</h1>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+<p class="text-white ml-2 mr-2">{% trans 'Are you sure you want to sign out?' %}</p>
 
-<form method="post" action="{% url 'account_logout' %}">
+<form class="ml-2" method="post" action="{% url 'account_logout' %}">
   {% csrf_token %}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
   <button type="submit">{% trans 'Sign Out' %}</button>
 </form>
-
+</section>
 
 {% endblock %}
