--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -36,11 +36,11 @@
               {% if request.user.is_superuser %}
                   <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
               {% endif %}
-              <a href="" class="dropdown-item">My Profile</a>
-              <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+              <a href="{% url 'profile' %}" class="dropdown-item text-danger">My Profile</a>
+              <a href="{% url 'account_logout' %}" class="dropdown-item text-danger">Logout</a>
           {% else %}
-              <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-              <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+              <a href="{% url 'account_signup' %}" class="dropdown-item text-danger">Register</a>
+              <a href="{% url 'account_login' %}" class="dropdown-item text-danger">Login</a>
           {% endif %}
       </div>
   </li>
