--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -59,7 +59,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-danger " href="#" id="contact-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-danger" href="{% url 'contact' %}">
                 Contact Us
             </a>
         </li>
