--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -11,9 +11,9 @@
 {% endblock %}
 
 {% block content %}
-<h1>Contact Us</h1>
-<div class="container">
-    <div class="row justify-content-center">
+<h1 class="extra-top text-center text-white pt-5">Contact Us</h1>
+<div class="container mt-5 mt-lg-0 pt-5 pt-lg-0">
+    <div class="row justify-content-center mt-1 mt-lg-0 pt-1 mt-lg-0">
         <div class="col-md-6">
             <form method="post" class="form-group text-white">
                 {% csrf_token %}
@@ -34,6 +34,5 @@
         </div>
     </div>
 </div>
-
                 
 {% endblock %}
