--- a/static/css/base.css
+++ b/static/css/base.css
@@ -363,7 +363,7 @@ body {
 
     .banner-text {
         font-size: 20px;
-        color: #e6983c;
+        color: white;
         padding: 4px 10px 4px 10px;
     }
 
