Add %20 to replace whitespace

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -27,8 +27,8 @@
                 Wine
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="wine-link">
-                <a href="{% url 'products' %}?category=red wine" class="dropdown-item text-danger">Red</a>
-                <a href="{% url 'products' %}?category=white wine" class="dropdown-item text-danger">White</a>
+                <a href="{% url 'products' %}?category=red%20wine" class="dropdown-item text-danger">Red</a>
+                <a href="{% url 'products' %}?category=white%20wine" class="dropdown-item text-danger">White</a>
                 <a href="{% url 'products' %}?category=rose" class="dropdown-item text-danger">Rose</a>
             </div>
         </li>
@@ -53,7 +53,7 @@
                 <a href="{% url 'products' %}?special=new_arrival" class="dropdown-item text-danger">New Arrivals</a>
                 <a href="{% url 'products' %}?special=deal" class="dropdown-item text-danger">Deals</a>
                 <a href="{% url 'products' %}?special=clearance" class="dropdown-item text-danger">Clearance</a>
-                <a href="{% url 'products' %}?special=all_specials" class="dropdown-item text-danger">All Specials</a>
+                <a href="{% url 'products' %}?special=all%20specials" class="dropdown-item text-danger">All Specials</a>
 
             </div>
         </li>
