Remove child of H4

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -21,14 +21,14 @@
                     <h4>
                         <a href="{% url 'products' %}" class="shop-now-button btn btn-lg btn-danger rounded-2 text-uppercase py-3">Shop Now</a>
                     </h4>
-                    <h4>
-                        <p class="text-white">Subscribe To Our Newsletter</p>
+                    
+                        <h4 class="text-white">Subscribe To Our Newsletter</h4>
                         <form class="text-white" method="post" action="{% url 'newsletter_signup' %}">
                             {% csrf_token %}
                             {{ form.as_p }}
                             <button type="submit">Subscribe Click Here</button>
                         </form>
-                    </h4>
+                    
                 </div>
             </div>
         </div>
