--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -153,13 +153,13 @@
 {% block postloadjs %}
     {{ block.super }}
 
-<script type="text/javascript">
+<script>
     $('.btt-link').click(function(e) {
         window.scrollTo(0,0)
     })
 </script>
 
-<script type="text/javascript">
+<script>
 
    // This will attach an event listener to the "sort-selector" dropdown.
 document.getElementById("sort-selector").addEventListener("change", function() {
