--- a/templates/base.html
+++ b/templates/base.html
@@ -144,7 +144,7 @@
     {% endblock %}
 
     {% block postloadjs %}
-    <script type="text/javascript">
+    <script>
         $('.toast').toast('show');
 
     var searchInput = document.getElementById("searchInput");
