--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,61 +1,61 @@
-<ul id="mobile-background">
-    <a href="{% url 'home' %}" class="nav-link main-logo-link d-lg-none">
-        <h2 class="logo-font text-danger my-0">Shopaholic <span><i class="fa-solid fa-champagne-glasses"></i></span></h2>
-    </a>
+<ul id="mobile-background" class="list-inline list-unstyled text-center text-lg-right my-0">
     <li class="list-inline-item">
-      <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <div class="text-center">
-              <div><i class="fas fa-search fa-lg text-danger"></i></div>
-              <p class="my-0 text-danger">Search</p>
-          </div>
-      </a>
-      <div class="dropdown-menu border-1 w-100 rounded-0 my-0 bg-black" aria-labelledby="mobile-search">
-          <form class="form" method="GET" action="{% url 'products' %}">
-              <div class="input-group w-100">
-                  <input class="form-control border border-danger rounded-2" type="text" name="q" placeholder="Search our site">
-                  <div class="input-group-append">
-                      <button class="form-control form-control btn btn-danger rounded-2" type="submit">
-                          <span class="icon">
-                              <i class="fas fa-search"></i>
-                          </span>
-                      </button>
-                  </div>
-              </div>
-          </form>
-      </div>
+        <a href="{% url 'home' %}" class="nav-link main-logo-link d-lg-none">
+            <h2 class="logo-font text-danger my-0">Shopaholic <span><i class="fa-solid fa-champagne-glasses"></i></span></h2>
+        </a>
     </li>
-  <li class="list-inline-item dropdown">
-      <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options-mobile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <div class="text-center">
-              <div><i class="fas fa-user fa-lg text-danger"></i></div>
-              <p class="my-0 text-danger">My Account</p>
-          </div>
-      </a>
-      <div class="dropdown-menu border-0" aria-labelledby="user-options-mobile">
-          {% if request.user.is_authenticated %}
-              {% if request.user.is_superuser %}
-                  <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
-              {% endif %}
-              <a href="{% url 'profile' %}" class="dropdown-item text-danger">My Profile</a>
-              <a href="{% url 'account_logout' %}" class="dropdown-item text-danger">Logout</a>
-          {% else %}
-              <a href="{% url 'account_signup' %}" class="dropdown-item text-danger">Register</a>
-              <a href="{% url 'account_login' %}" class="dropdown-item text-danger">Login</a>
-          {% endif %}
-      </div>
-  </li>
-  <li class="list-inline-item">
-      <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'view_bag' %}">
-          <div class="text-center">
-              <div><i class="fas fa-shopping-bag fa-lg text-danger"></i></div>
-              <p class="my-0 text-danger">
-                  {% if grand_total %}
-                      £{{ grand_total|floatformat:2 }}
-                  {% else %}
-                      £0.00
-                  {% endif %}
-              </p>
-          </div>
-      </a>
+    <li class="list-inline-item">
+        <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <div class="text-center">
+                <i class="fas fa-search fa-lg text-danger"></i>
+                <p class="my-0 text-danger">Search</p>
+            </div>
+        </a>
+        <div class="dropdown-menu border-1 w-100 rounded-0 my-0 bg-black" aria-labelledby="mobile-search">
+            <form class="form" method="GET" action="{% url 'products' %}">
+                <div class="input-group w-100">
+                    <input class="form-control border border-danger rounded-2" type="text" name="q" placeholder="Search our site">
+                    <div class="input-group-append">
+                        <button class="btn btn-danger rounded-2" type="submit">
+                            <i class="fas fa-search"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
     </li>
-  </ul>
+    <li class="list-inline-item dropdown">
+        <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options-mobile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <div class="text-center">
+                <i class="fas fa-user fa-lg text-danger"></i>
+                <p class="my-0 text-danger">My Account</p>
+            </div>
+        </a>
+        <div class="dropdown-menu border-0" aria-labelledby="user-options-mobile">
+            {% if request.user.is_authenticated %}
+                {% if request.user.is_superuser %}
+                    <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
+                {% endif %}
+                <a href="{% url 'profile' %}" class="dropdown-item text-danger">My Profile</a>
+                <a href="{% url 'account_logout' %}" class="dropdown-item text-danger">Logout</a>
+            {% else %}
+                <a href="{% url 'account_signup' %}" class="dropdown-item text-danger">Register</a>
+                <a href="{% url 'account_login' %}" class="dropdown-item text-danger">Login</a>
+            {% endif %}
+        </div>
+    </li>
+    <li class="list-inline-item">
+        <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'view_bag' %}">
+            <div class="text-center">
+                <i class="fas fa-shopping-bag fa-lg text-danger"></i>
+                <p class="my-0 text-danger">
+                    {% if grand_total %}
+                        £{{ grand_total|floatformat:2 }}
+                    {% else %}
+                        £0.00
+                    {% endif %}
+                </p>
+            </div>
+        </a>
+    </li>
+</ul>
