--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -102,7 +102,7 @@
 
                                         </div>
                                 <div class="card-body pb-0">
-                                    <p class="mb-0"><strong>Type: </strong>{{ product.category }}</></p>
+                                    <p class="mb-0"><strong>Type: </strong>{{ product.category }}</p>
                                     <p class="mb-0"><strong>Description: </strong>{{ product.description }}</p>
                                     <p class="mb-0"><strong>Alcohol Content: </strong>{{ product.alcohol_content }}%</p>
                                     <p class="mb-0"><strong>Volume: </strong>{{ product.volume }} mls</p>
